JS Assignment Complete

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Math Expressions</title>
-</head>
-<body>
-    <a href="./Math Expressions/"></a>
-</body>
+    <style>
+        body {
+            background-color: cornflowerblue;
+        }
+        h1 {
+            color: rgb(212, 57, 57);
+        }
+        ol > li {
+            list-style-type: decimal-leading-zero;
+            font-size: 25px;
+            margin-top: 20px;
+            padding: 10px;
+        }
+        a {
+            text-decoration: none;
+            color: chartreuse;
+        }
+    </style>
+  </head>
+  <body>
+    <h1>Assignments of JavaScript From Chp 6 to 9</h1>
+    <ol>
+      <li><a href="./Question no.1/index.html">Question No.1</a></li>
+      <li><a href="./Question no.2/index.html">Question No.2</a></li>
+      <li><a href="./Question no.3/index.html">Question No.3</a></li>
+      <li><a href="./Question no.4/index.html">Question No.4</a></li>
+      <li><a href="./Question no.5/index.html">Question No.5</a></li>
+    </ol>
+  </body>
 </html>
